[package]
name = "omecat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.192", features = ["derive"] }
tiff = "0.9.0"
xmlem = "0.2.3"
